--- a/templates/index.html
+++ b/templates/index.html
@@ -21,5 +21,6 @@
             </div>
             <input type="submit" value="Predict">
         </form>
+        <p>{{ result }}</p>
     </div>
 </body>
