--- a/templates/index.html
+++ b/templates/index.html
@@ -16,11 +16,32 @@
         <h2>Enter measured characteristics</h2>
         <form method='POST'>
             {% csrf_token %}
-            <div>
-                {{ form.as_p }}
+            <div class="form-group-row">
+            <label id="sepal_length">{{ form.sepal_length.label}}</label>
+                <div class="slider-8cm">{{ form.sepal_length}}</div>
+            <!--<span id="sepal_length_output">{{ form.sepal_length.value }}</span>-->
             </div>
-            <input type="submit" value="Predict">
+
+            <div class="form-group-row">
+            <label id="sepal_length">{{ form.sepal_width.label}}</label>
+                <div class="slider-8cm">{{ form.sepal_width}}</div>
+            <!--<span id="sepal_length_output">{{ form.sepal_width.value }}</span>-->
+            </div>
+
+            <div class="form-group-row">
+            <label id="sepal_length">{{ form.petal_length.label}}</label>
+                <div class="slider-8cm">{{ form.petal_length}}</div>
+            <!--<span id="sepal_length_output">{{ form.petal_length.value }}</span>-->
+            </div>
+
+            <div class="form-group-row-2">
+            <label id="sepal_length">{{ form.petal_width.label}}</label>
+                <div class="slider-8cm">{{ form.petal_width}}</div>
+            <!--<span id="petal_width_output">{{ form.petal_width.value }}</span>-->
+            </div>
+
+            <input class="predict_input" type="submit" value="Predict">
         </form>
-        <p>{{ result }}</p>
+        <p class="result-text">Look's like it is {{ result }}</p>
     </div>
 </body>
